<?xml version="1.0"?>
<package format="3">
  <name>grasp_bringup</name>
  <version>0.0.0</version>
  <description>Bringup/launch files for the modular grasping pipeline</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>grasp_perception</exec_depend>
  <exec_depend>grasp_algorithms</exec_depend>
  <exec_depend>grasp_executor</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
