<?xml version="1.0"?>
<package format="3">
  <name>grasp_executor</name>
  <version>0.0.0</version>
  <description>Panda-specific executor: transforms, MoveIt calls, gripper actions</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>rclpy_action</exec_depend>

  <!-- gripper action package from LCAS / franka_arm_ros2 -->
  <exec_depend>franka_msgs</exec_depend>
  <exec_depend>grasp_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
