<?xml version="1.0"?>
<package format="3">
  <name>grasp_interfaces</name>
  <version>0.0.0</version>
  <description>Common messages for grasp candidates (GraspCandidate, GraspCandidateArray)</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS interface generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- message types used by our msgs -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- runtime deps used by nodes that will depend on this package -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
